--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,53 +9,51 @@
 
     <ImageView
         android:id="@+id/iv_medicare_logo"
-        android:layout_width="84dp"
-        android:layout_height="163dp"
-        android:layout_marginTop="142dp"
+        android:layout_width="@dimen/_70sdp"
+        android:layout_height="@dimen/_140sdp"
+        android:layout_marginTop="@dimen/_90sdp"
         android:src="@drawable/ic_medi_care_logo"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
       />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="47sp"
+        android:textSize="@dimen/_40ssp"
         android:textColor="@color/text_main_color"
-        android:lineSpacingExtra="19sp"
         android:layout_gravity="center"
-        android:layout_marginTop="15dp"
-        tools:text="MediCare"
+        android:layout_marginTop="@dimen/_12sdp"
+        android:text="@string/medicare"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:textSize="@dimen/_10ssp"
         android:textColor="@color/text_main_color"
-        android:lineSpacingExtra="5sp"
         android:layout_gravity="center_horizontal"
-        tools:text="first personal health record"
+        android:text="@string/main_text"
         />
 
     <Spinner
         android:id="@+id/spinner_language"
         android:entries="@array/languages_entities"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="74dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/_55sdp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:spinnerMode="dropdown"
-        android:backgroundTint="@color/text_main_color"
-        android:theme="@style/spinnerItemStyle"
-     />
+        />
+
     <Button
+        android:id="@+id/btn_done"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:textSize="@dimen/_12ssp"
         android:textColor="#ffffff"
-        android:lineSpacingExtra="2sp"
         android:layout_gravity="center"
-        android:layout_marginTop="32dp"
-        tools:text="Done"
+        android:layout_marginTop="@dimen/_25sdp"
+        android:layout_marginBottom="@dimen/_25sdp"
+        android:text="@string/done"
         android:background="@drawable/ic_rectangle_15"
         />
 
