--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,8 @@
     <color name="ballReleaseColor">#212121</color>
     <color name="basePressColor">#9e9e9e</color>
 
+    <color name="black">#000</color>
+
     <color name="text_main_color">#008080</color>
 
     <color name="white">#ffffff</color>
