--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -205,6 +205,7 @@
         <EditText
             android:id="@+id/et_date"
             android:editable="false"
+            android:focusable="false"
             android:layout_width="@dimen/_220sdp"
             android:layout_height="@dimen/_39sdp"
             android:layout_gravity="center"
@@ -212,6 +213,7 @@
             android:gravity="center"
             android:textColor="#000000"
             android:textSize="@dimen/_12ssp"
+            android:clickable="true"
             android:hint="Date of Birth" />
 
         <ImageView
