--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="basePressColor">#9e9e9e</color>
 
     <color name="black">#000</color>
+    <color name="red">#e90000</color>
 
     <color name="text_main_color">#008080</color>
 
