--- a/app/src/main/res/layout/activity_sub_folder.xml
+++ b/app/src/main/res/layout/activity_sub_folder.xml
@@ -26,7 +26,7 @@
 
     </android.support.v7.widget.RecyclerView>
 
-        <android.support.design.widget.FloatingActionButton
+      <!--  <android.support.design.widget.FloatingActionButton
             android:id="@+id/fb_add_folder"
             android:layout_margin="@dimen/_18sdp"
             android:layout_gravity="bottom|right"
@@ -34,7 +34,10 @@
             android:background="@color/text_main_color"
             android:src="@drawable/ic_add_24dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content" />-->
+        <include
+            layout="@layout/layout_fab_submenu"
+            />
 
     </FrameLayout>
 
