--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -89,178 +89,15 @@
     </android.support.constraint.ConstraintLayout>
 
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/_26sdp">
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/et_name"
-            android:layout_width="@dimen/_220sdp"
-            android:layout_height="@dimen/_39sdp"
-            android:layout_gravity="center"
-            android:background="@mipmap/field"
-            android:gravity="center"
-            android:textColor="#000000"
-            android:textSize="@dimen/_12ssp"
-            android:hint="Name" />
-
-        <ImageView
-            android:layout_width="@dimen/_9sdp"
-            android:layout_height="@dimen/_10sdp"
-            android:layout_marginLeft="@dimen/_20sdp"
-            android:layout_marginTop="@dimen/_16sdp"
-            android:src="@drawable/ic_name_icon" />
-    </FrameLayout>
+    </LinearLayout>
 
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/_10sdp">
 
-        <EditText
-            android:id="@+id/et_user_name"
-            android:layout_width="@dimen/_220sdp"
-            android:layout_height="@dimen/_39sdp"
-            android:layout_gravity="center"
-            android:background="@mipmap/field"
-            android:gravity="center"
-            android:textColor="#000000"
-            android:textSize="@dimen/_12ssp"
-            android:hint="User Name" />
-
-        <ImageView
-            android:layout_width="@dimen/_9sdp"
-            android:layout_height="@dimen/_10sdp"
-            android:layout_marginLeft="@dimen/_20sdp"
-            android:layout_marginTop="@dimen/_16sdp"
-            android:src="@drawable/ic_name_icon" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/_10sdp"
-        >
-
-        <EditText
-            android:id="@+id/et_email"
-            android:layout_width="@dimen/_220sdp"
-            android:layout_height="@dimen/_39sdp"
-            android:inputType="textEmailAddress"
-            android:layout_gravity="center"
-            android:background="@mipmap/field"
-            android:gravity="center"
-            android:textColor="#000000"
-            android:textSize="@dimen/_12ssp"
-            android:hint="Email" />
-
-        <ImageView
-            android:layout_width="@dimen/_9sdp"
-            android:layout_height="@dimen/_10sdp"
-            android:layout_marginLeft="@dimen/_20sdp"
-            android:layout_marginTop="@dimen/_16sdp"
-            android:src="@drawable/ic_mail_icon" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:layout_width="wrap_content"
-
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/_10sdp">
-
-        <EditText
-            android:id="@+id/et_password"
-            android:inputType="numberPassword"
-            android:layout_width="@dimen/_220sdp"
-            android:layout_height="@dimen/_39sdp"
-            android:layout_gravity="center"
-            android:background="@mipmap/field"
-            android:gravity="center"
-            android:textColor="#000000"
-            android:textSize="@dimen/_12ssp"
-            android:hint="Password" />
-
-        <ImageView
-            android:layout_width="@dimen/_9sdp"
-            android:layout_height="@dimen/_10sdp"
-            android:layout_marginLeft="@dimen/_20sdp"
-            android:layout_marginTop="@dimen/_16sdp"
-            android:src="@drawable/ic_password_icon" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:layout_width="wrap_content"
-
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/_10sdp"
-        >
-
-        <EditText
-            android:id="@+id/et_date"
-            android:editable="false"
-            android:focusable="false"
-            android:layout_width="@dimen/_220sdp"
-            android:layout_height="@dimen/_39sdp"
-            android:layout_gravity="center"
-            android:background="@mipmap/field"
-            android:gravity="center"
-            android:textColor="#000000"
-            android:textSize="@dimen/_12ssp"
-            android:clickable="true"
-            android:hint="Date of Birth" />
-
-        <ImageView
-            android:layout_width="@dimen/_9sdp"
-            android:layout_height="@dimen/_10sdp"
-            android:layout_marginLeft="@dimen/_20sdp"
-            android:layout_marginTop="@dimen/_16sdp"
-            android:src="@drawable/ic_date_icon" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/_10sdp">
-
-        <EditText
-            android:id="@+id/gender"
-            android:layout_width="@dimen/_220sdp"
-            android:layout_height="@dimen/_39sdp"
-            android:layout_gravity="center"
-            android:background="@mipmap/field"
-            android:gravity="center"
-            android:textColor="#000000"
-            android:textSize="@dimen/_12ssp"
-            android:hint="Gender" />
-
-        <ImageView
-            android:layout_width="@dimen/_9sdp"
-            android:layout_height="@dimen/_10sdp"
-            android:layout_marginLeft="@dimen/_20sdp"
-            android:layout_marginTop="@dimen/_16sdp"
-            android:src="@drawable/ic_gender_icon" />
-    </FrameLayout>
-
-
-    <Button
-        android:id="@+id/btn_signUp"
-        android:layout_width="@dimen/_220sdp"
-        android:layout_height="@dimen/_39sdp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/_28sdp"
-        android:layout_margin="@dimen/_24sdp"
-        android:background="@drawable/shape_oval"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:textSize="@dimen/_12ssp"
-        android:text="Sign Up" />
 
 </LinearLayout>
