--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="black">#000</color>
     <color name="red">#e90000</color>
 
+    <color name="transparent">#000000</color>
+
     <color name="text_main_color">#008080</color>
 
     <color name="white">#ffffff</color>
