--- a/app/src/main/res/layout/fragment_patietn.xml
+++ b/app/src/main/res/layout/fragment_patietn.xml
@@ -3,13 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.ChatFragment">
-
-
+    tools:context=".Fragments.PatientFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_chat"
+        android:id="@+id/rv_patient_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
 
 </RelativeLayout>
