--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -4,15 +4,33 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="8dp"
-    android:background="#000000">
+    android:background="@drawable/oval_expand_list"
+    android:layout_margin="@dimen/_12sdp">
 
-    <TextView
-        android:text="Text View"
-        android:id="@+id/lblListHeader"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:textSize="17dp"
-        android:textColor="#f9f93d" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_margin="@dimen/_12sdp"
+            android:text="Text View"
+            android:id="@+id/lblListHeader"
+            android:layout_width="0dp"
+            android:layout_weight="5"
+            android:layout_height="wrap_content"
+            android:textSize="17dp" />
+
+        <ImageView
+            android:layout_marginTop="@dimen/_12sdp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="@dimen/_20sdp"
+            android:src="@drawable/ic_keyboard_arrow_down_24dp"/>
+
+    </LinearLayout>
+
+
+
 
 </LinearLayout>
