--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,7 +9,7 @@
     <include
         layout="@layout/header_layout"/>
     
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:background="@color/text_main_color"
         android:id="@+id/tab_layout"
         app:tabMode="fixed"
@@ -18,9 +18,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    </android.support.design.widget.TabLayout>
+    </com.google.android.material.tabs.TabLayout>
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
