--- a/app/src/main/res/layout/chat_item_left_layout.xml
+++ b/app/src/main/res/layout/chat_item_left_layout.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/_8sdp">
+    android:paddingLeft="@dimen/_8sdp"
+    >
 
     <TextView
         android:id="@+id/tv_time"
@@ -15,20 +17,24 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/tv_time"
         android:id="@+id/text_msg"
         android:text="Hello"
         android:textColor="#333333"
+        android:background="@drawable/chat_background_lft"
         android:padding="@dimen/_8sdp"
         android:textSize="@dimen/_16ssp"
-        android:background="@drawable/chat_background_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/txt_seen"
         android:layout_below="@id/text_msg"
-        android:text="seen"
+        android:layout_marginLeft="@dimen/_6sdp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-</LinearLayout>
+</RelativeLayout>
