--- a/app/src/main/res/layout/dialog_add_item_layout.xml
+++ b/app/src/main/res/layout/dialog_add_item_layout.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:padding="16dp"
     >
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/_8sdp"
@@ -15,7 +15,7 @@
             android:hint="Name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
