--- a/app/src/main/res/layout/dialog_home_layout.xml
+++ b/app/src/main/res/layout/dialog_home_layout.xml
@@ -6,15 +6,15 @@
     android:layout_gravity="bottom"
     >
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_dialog"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        </android.support.v7.widget.RecyclerView>
-    </android.support.v7.widget.CardView>
+        </androidx.recyclerview.widget.RecyclerView>
+    </androidx.cardview.widget.CardView>
 
 </FrameLayout>
