--- a/app/src/main/res/layout/header_details_layout.xml
+++ b/app/src/main/res/layout/header_details_layout.xml
@@ -7,6 +7,7 @@
     android:layout_height="@dimen/_40sdp">
     
     <ImageView
+        android:id="@+id/back_arrow"
         android:layout_gravity="center"
         android:layout_marginLeft="@dimen/_4sdp"
         android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
@@ -14,6 +15,7 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        android:id="@+id/header_name"
         android:text="test"
         android:textSize="@dimen/_16ssp"
         android:textColor="@color/white"
