--- a/app/src/main/res/layout/item_chat_layout.xml
+++ b/app/src/main/res/layout/item_chat_layout.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/chat_container"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_60sdp">
 
@@ -69,7 +70,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/_8sdp"
         android:textColor="@color/black"
-        android:textSize="@dimen/_7ssp"
+        android:textSize="@dimen/_9ssp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/frame_layout"
@@ -98,4 +99,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
