--- a/app/src/main/res/layout/layout_fab_submenu.xml
+++ b/app/src/main/res/layout/layout_fab_submenu.xml
@@ -7,33 +7,6 @@
     android:id="@+id/fabFrame"
     android:layout_margin="@dimen/_12sdp">
 
-    <LinearLayout
-        android:id="@+id/layoutFabSavePrescription"
-        android:gravity="center_vertical"
-        android:layout_gravity="bottom|end"
-        android:layout_marginRight="@dimen/_6sdp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_122sdp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_margin="@dimen/_4sdp"
-            android:layout_gravity="center"
-            android:text="@string/save_prescription"
-            android:id="@+id/tv_savePrescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <android.support.design.widget.FloatingActionButton
-            android:layout_gravity="center"
-
-            android:id="@+id/fabSavePrescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:backgroundTint="@color/text_main_color"
-            android:src="@drawable/ic_insert_file_24dp"
-            app:fabSize="mini"/>
-    </LinearLayout>
 
     <LinearLayout
 
@@ -53,7 +26,7 @@
             android:layout_margin="@dimen/_4sdp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-        <android.support.design.widget.FloatingActionButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_gravity="center"
 
             android:id="@+id/fabSaveFolder"
@@ -76,18 +49,18 @@
         <TextView
             android:layout_margin="@dimen/_4sdp"
             android:layout_gravity="center"
-            android:text="@string/save_folder"
+            android:text="Open Camera"
             android:id="@+id/tv_saveImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-        <android.support.design.widget.FloatingActionButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_gravity="center"
 
             android:id="@+id/fabSaveImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:backgroundTint="@color/text_main_color"
-            android:src="@drawable/ic_create_new_folder_black_24dp"
+            android:src="@drawable/ic_camera_alt_black_24dp"
             app:fabSize="mini"/>
     </LinearLayout>
 
@@ -104,7 +77,7 @@
         android:orientation="horizontal">
 
 
-        <android.support.design.widget.FloatingActionButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_gravity="center"
             android:id="@+id/fabMain"
             android:layout_width="wrap_content"
